@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 20, 2008
++ [FOD] Added support for the TGA file format in the codec
+
 August 08, 2008
 * [Parvatha] Fixed the DCinema filesize allocation. It now includes the SOT marker size
 
